--- a/style.css
+++ b/style.css
@@ -69,7 +69,11 @@ button{
     pointer-events: none;
 }
 button:hover{
-    background: #1f1f38;
+    background: #6666b9;
+}
+
+.Login button:hover{
+    background: rgb(33, 83, 119);
 }
 
 .Login{
@@ -83,6 +87,11 @@ button:hover{
 .Login label{
     color: #2c2c6c;
     transform: scale(.7);
+}
+.Login button{
+    border: 2px solid #2c2c6c;
+    background:  #4db5ff;
+
 }
 #check:checked ~ .Login{
     transform: translateY(-500px);
